add pagination component

--- a/index.html
+++ b/index.html
@@ -582,6 +582,17 @@
           </div>
         </article>
       </div>
+      <ul class="pagination u-margin-bottom-4">
+        <li class="pagination__item"><a href="" class="pagination__link pagination__link--active">1</a></li>
+        <li class="pagination__item"><a href="" class="pagination__link">2</a></li>
+        <li class="pagination__item"><a href="" class="pagination__link">3</a></li>
+        <li class="pagination__item"><a href="" class="pagination__link">4</a></li>
+        <li class="pagination__item">...</li>
+        <li class="pagination__item"><a href="" class="pagination__link">18</a></li>
+        <li class="pagination__item"><a href="" class="pagination__link">19</a></li>
+        <li class="pagination__item"><a href="" class="pagination__link">20</a></li>
+        <li class="pagination__item"><a href="" class="pagination__link">21</a></li>
+    </ul>
     </section>
   </main>
   <div class="side-menu-overly" style="display: none;"></div>
