add genre-btn and mini-card components

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
           </div>
         </article>
       </div>
-      <ul class="pagination u-margin-bottom-4">
+      <ul class="pagination">
         <li class="pagination__item"><a href="" class="pagination__link pagination__link--active">1</a></li>
         <li class="pagination__item"><a href="" class="pagination__link">2</a></li>
         <li class="pagination__item"><a href="" class="pagination__link">3</a></li>
@@ -594,6 +594,184 @@
         <li class="pagination__item"><a href="" class="pagination__link">21</a></li>
     </ul>
     </section>
+    <aside class="sidebar">
+      <section class="section">
+        <h2 class="heading-primary section__heading">جدیدترین سریال ها</h2>
+        <div class="cards-container u-margin-top-4">
+          <div class="mini-card-row-layout">
+            <div class="mini-card">
+              <div class="mini-card__img-box">
+                <a href="">
+                  <img src="img/post/elite-2018.jpg" alt="دانلود سریال Elite" class="mini-card__img">
+                </a>
+              </div>
+              <div class="mini-card__detail">
+                <a href="" class="mini-card__title prime-link prime-link--white">سریال Elite</a>
+                <span class="mini-card__notif"><i class="fas fa-bell"></i>فصل چهارم اضافه شد</span>
+              </div>
+            </div>
+            <div class="mini-card">
+              <div class="mini-card__img-box">
+                <a href="">
+                  <img src="img/post/ted-lasso-2020.jpg" alt="دانلود سریال Ted Lasso" class="mini-card__img">
+                </a>
+              </div>
+              <div class="mini-card__detail">
+                <a href="" class="mini-card__title prime-link prime-link--white">سریال Ted Lasso</a>
+                <span class="mini-card__notif"><i class="fas fa-bell"></i>قسمت 4 فصل دوم اضافه شد</span>
+              </div>
+            </div>
+          </div>
+          <div class="mini-card-row-layout">
+            <div class="mini-card">
+              <div class="mini-card__img-box">
+                <a href="">
+                  <img src="img/post/the-white-lotus-2021.jpg" alt="دانلود سریال The White Lotus" class="mini-card__img">
+                </a>
+              </div>
+              <div class="mini-card__detail">
+                <a href="" class="mini-card__title prime-link prime-link--white">سریال The White Lotus</a>
+                <span class="mini-card__notif"><i class="fas fa-bell"></i>قسمت 5 فصل اول اضافه شد</span>
+              </div>
+            </div>
+            <div class="mini-card">
+              <div class="mini-card__img-box">
+                <a href="">
+                  <img src="img/post/mr-corman-2021.jpg" alt="دانلود سریال Mr. Corman" class="mini-card__img">
+                </a>
+              </div>
+              <div class="mini-card__detail">
+                <a href="" class="mini-card__title prime-link prime-link--white">سریال Mr. Corman</a>
+                <span class="mini-card__notif"><i class="fas fa-bell"></i>قسمت 3 فصل اول اضافه شد</span>
+              </div>
+            </div>
+          </div>
+          <div class="mini-card-row-layout">
+            <div class="mini-card">
+              <div class="mini-card__img-box">
+                <a href="">
+                  <img src="img/post/titans-2018.jpg" alt="دانلود سریال Titans" class="mini-card__img">
+                </a>
+              </div>
+              <div class="mini-card__detail">
+                <a href="" class="mini-card__title prime-link prime-link--white">سریال Titans</a>
+                <span class="mini-card__notif"><i class="fas fa-bell"></i>قسمت 3 فصل سوم اضافه شد</span>
+              </div>
+            </div>
+            <div class="mini-card">
+              <div class="mini-card__img-box">
+                <a href="">
+                  <img src="img/post/the-outpost-2018.jpg" alt="دانلود سریال The Outpost" class="mini-card__img">
+                </a>
+              </div>
+              <div class="mini-card__detail">
+                <a href="" class="mini-card__title prime-link prime-link--white">سریال The Outpost</a>
+                <span class="mini-card__notif"><i class="fas fa-bell"></i>قسمت 4 فصل چهارم اضافه شد</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <h2 class="heading-primary section__heading u-margin-bottom-4">ژانر</h2>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">انیمیشن</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">اکشن</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">بیوگرافی</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">تاریخی</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">جنایی</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">جنگی</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">خانواده</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">درام</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">دلهره آور</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">عاشقانه</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">علمی تخیلی</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">فانتزی</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">فیلم کوتاه</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">ماجراجویی</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">مستند</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">معمایی</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">موزیکال</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">موسیقی</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">واقع نما</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">وحشت</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">ورزشی</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">وسترن</a>
+          </div>
+        </div>
+        <div class="genre-btn-row-layout">
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">گفتگو تلویزیونی</a>
+          </div>
+          <div class="genre-btn">
+            <a href="" class="genre-btn__link">کمدی</a>
+          </div>
+        </div>
+      </section>
+    </aside>
   </main>
   <div class="side-menu-overly" style="display: none;"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
