add footer component

--- a/index.html
+++ b/index.html
@@ -773,6 +773,28 @@
       </section>
     </aside>
   </main>
+  <footer class="footer">
+    <div class="footer__paragraph-box">
+        <p class="footer__paragraph">از جدیدترین اخبار فیلم ها و سریال ها با خبر شوید</p>
+    </div>
+    <form class="footer__form">
+      <div class="footer__input-box">
+          <i class="fas fa-envelope footer__input-icon"></i>
+          <input type="email" class="footer__input" placeholder="پست الکترونیکی شما" />
+      </div>
+      <button class="footer__form-btn">عضویت در خبرنامه</button>
+    </form>
+    <div class="footer__social-media">
+        <a href="" class="footer__social-media-btn"><i class="fab fa-instagram prime-link prime-link--white"></i></a>
+        <a href="" class="footer__social-media-btn"><i class="fab fa-telegram prime-link prime-link--white"></i></a>
+    </div>
+    <div class="footer__email-box">
+        <a href="" class="footer__email prime-link prime-link--white">support@gmail.com</a>
+    </div>
+    <div class="footer__copyright">
+        <p class="footer__copyright-text"><i class="far fa-copyright"></i> تمامی حقوق مادی و معنوی این وبسایت محفوظ میباشد و هرگونه کپی برداری غیرقانونی محسوب خواهد شد</p>
+    </div>
+</footer>
   <div class="side-menu-overly" style="display: none;"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="js/script.js"></script>
