add side menu layout for large screens

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>جی بی مووی | دانلود فیلم و سریال</title>
 </head>
 
-<body>
+<body class="side-menu-layout">
   <header class="header">
     <div class="header__menu-btn-box">
       <button class="menu-btn icon-btn icon-btn--bg-color-2 far fa-bars"></button>
@@ -79,7 +79,7 @@
     </nav>
   </aside>
 
-  <main>
+  <main class="main">
     <section class="section">
       <h2 class="heading-primary section__heading">
         <i class="fas fa-fire"></i>
